@@ -25,17 +25,23 @@ DAEMON_FREQ=5
 # How many connections define a bad IP per user? Indicate that below.
 NO_OF_CONNECTIONS=150
 
-# Not implemented yet.
-# This option enables the usage of PORT_MAX_CONNECTIONS.
+# Only count incoming connections to listening services, which will
+# prevent the server from banning multiple outgoing connections to
+# a single ip address. (slower than default in/out method)
+ONLY_INCOMING=false
+
+# Not tested yet.
+# This option enables the usage of PORT_CONNECTIONS.
+# (slower than ONLY_INCOMING method)
 ENABLE_PORTS=false
 
-# Not implemented yet.
+# Not tested yet.
 # Maximum amount of connections per port before blocking. If a user
 # is making all its connections to a single port the max connections
 # specified for the port will take precedence over the
-# NO_OF_CONNECTIONS value. The form for each por element should be:
-# "<port_num>:<max_conn>:<ban_period>"
-PORT_MAX_CONNECTIONS="80:150:600 443:150:600"
+# NO_OF_CONNECTIONS value. The form for each port element should be:
+# "<from_port[-to_port]>:<max_conn>:<ban_period>"
+PORT_CONNECTIONS="80:150:600 443:150:600 20-21:150:600"
 
 # The firewall to use for blocking/unblocking, valid values are:
 # auto, apf, csf, ipfw, and iptables
@@ -53,8 +59,3 @@ BAN_PERIOD=600
 # "established:syn-sent:syn-recv:fin-wait-1:fin-wait-2"
 # by default it blocks all states except for listening and closed
 CONN_STATES="connected"
-
-# Only count incoming connections to listening services, which will
-# prevent the server from banning multiple outgoing connections to
-# a single ip address.
-ONLY_INCOMING=false
