@@ -3,8 +3,11 @@ Changes Log
 
 Version 1.2 - Date 13/11/2018
 
-  * Initial implementation of banning by port
+  * Initial implementation of banning by port (untested)
   * Print remaining time on bans list.
+  * Renamed PORT_MAX_CONNECTIONS to PORT_CONNECTIONS
+  * Updated man page.
+  * Updated ddos.conf file.
 
 Version 1.1 - Date 11/11/2018
 
